# simple-llvm-pass

./: CMakeLists.txt  a.out  example
skeleton/: Skeleton.cpp
